<resources>
    <string name="app_name">LORCollectorsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LORCollectorApp</string>
    <string name="nav_header_subtitle">Build V1.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_card_gallery">Gallery</string>
    <string name="menu_add_cards">Add cards</string>
    <string name="menu_remove_cards">Remove cards</string>
    <string name="menu_stats">Stats</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Button Texts -->
    <string name="button_zero_option">0</string>
    <string name="button_one_option">1</string>
    <string name="button_two_option">2</string>
    <string name="button_three_option">3</string>
</resources>