<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="?attr/actionModePasteDrawable"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_card_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_card_gallery"/>

        <item
                android:title="@string/menu_stats"
                android:id="@+id/nav_stats"
                android:icon="@android:drawable/stat_notify_voicemail"/>

        <item
                android:id="@+id/nav_add_cards"
                android:icon="@android:drawable/ic_input_add"
                android:title="@string/menu_add_cards"/>

        <item
                android:title="@string/menu_remove_cards"
                android:id="@+id/nav_remove_cards"
                android:icon="@android:drawable/ic_dialog_alert"/>
    </group>
</menu>