<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.lorcollectorsapp.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_card_gallery"
            android:name="com.example.lorcollectorsapp.ui.gallery.GalleryFragment"
            android:label="@string/menu_card_gallery"
            tools:layout="@layout/fragment_gallery"/>

    <fragment
            android:id="@+id/nav_add_cards"
            android:name="com.example.lorcollectorsapp.ui.addCards.AddCards"
            android:label="@string/menu_add_cards"
            tools:layout="@layout/fragment_add_cards"/>
    <fragment android:id="@+id/settingsFragment" android:name="com.example.lorcollectorsapp.SettingsFragment"
              android:label="SettingsFragment"/>
</navigation>