<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addCards.AddCards"
        android:id="@+id/frameLayout">

    <ImageView
            android:id="@+id/card_viewer"
            android:layout_width="349dp"
            android:layout_height="556dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="100dp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:srcCompat="@drawable/_6bc030"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/card_viewer"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:paddingHorizontal="1dp">
        <Button
                android:text="@string/button_zero_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_zero_option" android:backgroundTint="#F44336"/>
        <Button
                android:text="@string/button_one_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_one_option"
                android:backgroundTint="#FF9800"/>
        <Button
                android:text="@string/button_two_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_two_option"
                android:backgroundTint="#FFEB3B"/>
        <Button
                android:text="@string/button_three_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_three_option"
                android:backgroundTint="#22AA27"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>